--- a/Chengyan's personal portfolio/style.css
+++ b/Chengyan's personal portfolio/style.css
@@ -9,7 +9,7 @@
 }
 
 :root {
-  --color-primary: #7562e0;
+  --color-primary: #bea48f;
   --color-primary-variant: rgba(102, 0, 255, 0.2);
   --color-white: #fff;
   --color-light: #f5f5f5;
