--- a/Chengyan's personal portfolio/style.css
+++ b/Chengyan's personal portfolio/style.css
@@ -275,11 +275,14 @@ section#services {
   background: var(--color-primary);
   padding: 1rem;
   color: var(--color-light);
+  position: relative;
   
 }
 
 .services__left h1 {
-  margin-top: 50%;
+  position: absolute;
+  /* margin-top: 50%; */
+  top:25%;
   font-size: 4rem;
   font-weight: 900;
   /* color: var(--color-white); */
@@ -294,7 +297,7 @@ section#services {
 
 .services__right h2 {
   font-size: 1.5rem;
-  font-weight: 500;
+  font-weight: 300;
   margin-bottom: 2rem;
 }
 
